# jackal-code

./: README.md  mymap.pgm
devel/: local_setup.sh
devel/lib/pkgconfig/: fath_pivot_mount_description.pc  gmu12_jackal.pc  realsense2_camera.pc  realsense2_description.pc  simple_controller.pc
devel/share/fath_pivot_mount_description/cmake/: fath_pivot_mount_descriptionConfig.cmake
devel/share/gmu12_jackal/cmake/: gmu12_jackalConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/simple_controller/cmake/: simple_controllerConfig.cmake
install/: setup.sh
install/lib/gmu12_jackal/: environment  install
install/lib/pkgconfig/: realsense2_description.pc
install/share/fath_pivot_mount_description/cmake/: fath_pivot_mount_descriptionConfig.cmake
install/share/gmu12_jackal/: package.xml
install/share/gmu12_jackal/cmake/: gmu12_jackalConfig.cmake
install/share/gmu12_jackal/launch/: extras.launch
install/share/gmu12_jackal/meshes/: sensor_mount.STL
install/share/gmu12_jackal/urdf/: gmu12_customization.urdf.xacro
install/share/realsense2_camera/cmake/: realsense2_cameraConfig.cmake
install/share/roseus/ros/realsense2_camera/: manifest.l
src/: .rosinstall
src/simple_controller/: controller.py  randomized_controller.py  set_controller.py
src/testlidar/: CMakeLists.txt  multipathfollow.py  notes.txt  package.xml  printstuff3.py  singlepathfollow.py
